[project]
name = "vllm-hud"
version = "0.1.0"
description = "vLLM vulnerability testing environment"
requires-python = ">=3.9"
dependencies = [ "hud-python", "mcp", "requests",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hud]
image = "vllm-cve-2025-32444:latest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/controller",]
